# VerifLM

./: .gitignore  GPU_TRAINING_GUIDE.md  LICENSES.md  Makefile  README.md  extract_lean_data.py  gpt4_prompt_template.md  lean_data_sources.md  pyproject.toml  requirements.txt  setup_gpu.sh  test_gpt2_simple.py  test_lora_simple.py  test_modern_model.py
configs/: base.yaml  gpu_config.yaml
data/: aug_all.jsonl  aug_minif2f.jsonl  pairs_stdlib.jsonl
data/hf/test/: data-00000-of-00001.arrow  state.json
data/hf/train/: data-00000-of-00001.arrow  state.json
data/hf/val/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/raw/: lean_examples.txt  lean_training_data.json
scripts/: augment_inputs.py  build_hf_dataset.py  evaluate.py  extract_pairs.py  fetch_data.py  train_lora.py
src/leanft/: __init__.py
src/leanft/data/: __init__.py  augment.py  dataset.py  extract.py  sources.py
src/leanft/eval/: __init__.py  metrics.py
src/leanft/train/: __init__.py  config.py  loop.py  lora.py
src/leanft/utils/: __init__.py  logging.py
tests/: gpt2_tests.py  lora_dryrun.py  test_dataset.py  test_extract.py
