[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leanft"
version = "0.1.0"
description = "Lean theorem fine-tuning toolkit with data extraction, augmentation, and LoRA training."
authors = [{ name = "Lean Fine-Tuning Team" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
  "accelerate==0.33.0",
  "datasets==2.20.0",
  "huggingface-hub==0.24.5",
  "omegaconf==2.3.0",
  "peft==0.11.1",
  "rich==13.7.1",
  "sentencepiece==0.1.99",
  "tokenizers==0.19.1",
  "transformers==4.43.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
]
logging = ["wandb==0.17.4", "tensorboard==2.17.0"]

[project.urls]
homepage = "https://github.com/leanprover-community/mathlib4"
documentation = "README.md"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
